src/app/_components/character/character.component.scss
// GLOBAL

.break {
  flex-basis: 100%;
  height: 0;
}

.empty {
  margin: -24px 24px;
}

.selected {
  border: 1px solid #F44336;
}

// STYLES

// container
.dialog {
  margin: -24px;
  padding: 24px;
  display: flex;
  flex-direction: row;
}

// preview
.dialog-preview {
  font-family: 'Rubik', sans-serif;
  height: 665px;
  overflow: hidden;

  img {
    border-radius: 4px;
    border: 3px solid black;
  }

  .heading.en {
    margin: 0;
    font-size: 1.5em;
    text-align: center;
    margin-top: 16px;
  }
  
  .heading.int {
    margin: 0;
    text-align: center;
    margin-top: 8px;
  }

  .body {
    margin-top: 16px;
    text-align: center;

    .text {
      margin-bottom: 4px;
    }
  }

  .mat-divider {
    margin-top: 24px;
    margin-bottom: 16px;
  }

  .media {
    display: flex;
    flex-flow: row;
    width: 225px;

    .mat-stroked-button {
      width: 100%;
    }

    > div {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
    }    
  }

  .loading {
    position: absolute;
    transform: translateY(20px);
    z-index: 500;
    margin: -50px 0;
    width: 225px;
  }
}

// content
.dialog-content {
  margin: -24px -24px -24px 0;
  padding: 24px 24px 24px 20px;
  display: flex;
  flex-flow: row wrap;
  // max-height: 665px + 48px;
  height: 665px + 48px;

  width: 30vw;
  min-width: 500px;

  .mat-divider {
    margin: 12px 0;
  }
}

// media lists
.anime {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;

  .preview {
    flex-grow: 0;
    width: 200px;
    
    img {
      width: 200px;
      border-radius: 4px;
      border: 3px solid black;
    }

    .mat-stroked-button {
      margin-top: 8px;
      width: 200px;
    }
  }

  .content {
    padding-left: 16px;
    flex-grow: 1;

    .en {
      font-size: 1.5em;
    }

    .head {
      font-size: 1.1em;
      margin-top: 16px;
    }

    .link {
      color: #007bff;
      cursor: pointer;
    }

    .link:hover {
      color: #0056b3;
      text-decoration: underline;
    }
  }
}

// selected media
.selected-media {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  .preview {
    flex-grow: 0;
    width: 200px;
    
    img {
      width: 200px;
      border-radius: 4px;
      border: 3px solid black;
    }
  }

  .content {
    padding-left: 16px;
    max-width: 240px;
    flex-grow: 1;

    .en {
      font-size: 1.5em;
    }

    .int {

    }
  }

  .synopsis {
    flex-basis: 100%;
    margin-top: 8px;

    .head {
      font-size: 1.3em;
      margin-top: 16px;
    }
  }

  .action {
    flex-basis: 100%;

    .mat-stroked-button {
      width: 100%;
    }
  }
}

